# CHILS

./: .gitignore  CHILS  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  github-actions-demo.yml  github-actions.yml
include/: chils.h  chils_internal.h  clique_graph.h  clique_local_search.h  graph.h  kernelization.h  local_search.h  local_search_avx.h  mwis.h  pils.h  reductions.h  tiny_solver.h
python/: README.md  pyproject.toml  setup.py  setup.sh
src/: chils.c  chils_internal.c  clique_graph.c  clique_local_search.c  graph.c  kernelization.c  local_search.c  local_search_avx.c  main.c  main_kernel.c  main_pils.c  mwis.c  pils.c  reductions.c  tiny_solver.c
src/reductions/: clique.c  domination.c  extended_single_edge.c  extended_twin.c  heavy_vertex.c  neighborhood.c  reductions.c  single_edge.c  twin.c  unconfined.c
